--- a/public/style.css
+++ b/public/style.css
@@ -574,6 +574,10 @@ video {
   grid-row: span 2 / span 2;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -630,6 +634,10 @@ video {
   flex: 1 1 0%;
 }
 
+.origin-center {
+  transform-origin: center;
+}
+
 .grid-flow-row {
   grid-auto-flow: row;
 }
@@ -650,6 +658,10 @@ video {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
+.place-items-center {
+  place-items: center;
+}
+
 .items-center {
   align-items: center;
 }
@@ -660,6 +672,10 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.place-self-center {
+  place-self: center;
 }
 
 .self-center {
@@ -707,6 +723,10 @@ video {
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .object-center {
@@ -817,6 +837,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:absolute {
+    position: absolute;
+  }
+
+  .md\:relative {
+    position: relative;
+  }
+
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -933,6 +961,10 @@ video {
     display: grid;
   }
 
+  .md\:w-auto {
+    width: auto;
+  }
+
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -985,6 +1017,14 @@ video {
 
   .md\:p-5 {
     padding: 1.25rem;
+  }
+
+  .md\:p-8 {
+    padding: 2rem;
+  }
+
+  .md\:p-11 {
+    padding: 2.75rem;
   }
 
   .md\:text-left {
